--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 Commands for conda install:
 conda install -c pytorch -c nvidia -c conda-forge pytorch torchvision pytorch-cuda=11.8 ultralytics
 conda install -c open3d-admin open3d
+conda install scipy pandas tqdm
